# nestjs-rules-js-pulumi

./: .bazelignore  .bazelrc  .swcrc  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.yaml  tsconfig.json
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
manifests/: BUILD.bazel  NOTES.md  Pulumi.echo-1.yaml  Pulumi.yaml  example.yaml  index.ts  package-lock.json  package.json  tsconfig.json
src/: app.controller.ts  main.ts
tools/: BUILD.bazel  pull.bzl  stamp_tags.bzl  workspace_status.sh  write_swcrc.js
