load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

# For more information about using swc to transpile please see the ts_project_transpiler example
ts_project(
    name = "pulumi",
    srcs = [
        "index.ts",
    ],
    declaration = True,
    source_map = True,
    transpiler = partial.make(
        swc,
        swcrc = ".swcrc",
    ),
    deps = [
        ":node_modules/@pulumi/aws",
        ":node_modules/@pulumi/awsx",
        ":node_modules/@pulumi/kubernetes",
        ":node_modules/@pulumi/pulumi",
        ":node_modules/@types/node",
        ":node_modules/cmd-ts",
    ],
)


js_binary(
    name = "bin",
    data = [
        ":pulumi",
        "//:version",
        # TODO: we actually need to *push* the image.. which is a run, not a build.
        "//:push_image_index"
    ],
    entry_point = "index.js",
    env = {
        # Did not set anything for this.
        "PULUMI_CONFIG_PASSPHRASE": "",
    },
)


js_binary(
    name = "preview",
    data = [
        ":pulumi",
        "//:version",
        "//:push_image_index"
    ],
    args = [
        "preview", 
        "--version-label-from=version.txt"
    ],
    entry_point = "index.js",
    env = {
        # Did not set anything for this.
        "PULUMI_CONFIG_PASSPHRASE": "",
    },
)


js_binary(
    name = "destroy",
    data = [
        ":pulumi",
        "//:version",
    ],
    args = [
        "destroy", 
        "--version-label-from=version.txt"
    ],
    entry_point = "index.js",
    env = {
        # Did not set anything for this.
        "PULUMI_CONFIG_PASSPHRASE": "",
    },
)


js_binary(
    name = "deploy",
    data = [
        ":pulumi",
        "//:version",
        "//:push_image_index"
    ],
    args = [
        "deploy", 
        "--version-label-from=version.txt"
    ],
    entry_point = "index.js",
    env = {
        # Did not set anything for this.
        "PULUMI_CONFIG_PASSPHRASE": "",
    },
)


#https://github.com/aspect-build/rules_swc/tree/main/examples/generate_swcrc
# Generates the .swcrc file from the tsconfig file.
# Technically we can do this *once* and copy the generated file around.
js_run_binary(
    name = "write_swcrc",
    tool = "//tools:converter",
    chdir = package_name(),
    args = ["./tsconfig.json"],
    srcs = ["tsconfig.json"],
    stdout = ".swcrc",
)